--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
 <body>
   <header>
     <nav class="nav">
-      <h1 class="nav__title"><span>Acme</span>Web Design</h1>
-      <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Contact</li>
-      </ul>
+      <div class="nav__navbar">
+        <h1 class="nav__title"><span>Acme</span>Web Design</h1>
+        <ul>
+          <li>Home</li>
+          <li>About</li>
+          <li>Contact</li>
+        </ul>
+      </div>
+
     </nav>
   </header>
 
