--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       <div class="nav__navbar">
         <h1 class="nav__title"><span>Acme</span>Web Design</h1>
         <ul>
-          <li>Home</li>
-          <li>About</li>
-          <li>Contact</li>
+          <li><a href="">Home</a></li>
+          <li><a href="">About</a></li>
+          <li><a href="">Contact</a></li>
         </ul>
       </div>
 
