--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
       <div class="nav__navbar">
         <h1 class="nav__title"><span>Acme</span>Web Design</h1>
         <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="">About</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="/about">About</a></li>
+          <li><a href="/contact.html">About</a></li>
+
         </ul>
       </div>
 
