--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul>
           <li><a href="/index.html">Home</a></li>
           <li><a href="/about">About</a></li>
-          <li><a href="/contact.html">About</a></li>
+          <li><a href="/contact.html  class=" current">About</a></li>
 
         </ul>
       </div>
