modified the navbar

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <nav class="nav">
+    <nav class="nav__container">
       <div class="nav__navbar">
         <h1 class="nav__title"><span>Acme</span>Web Design</h1>
         <ul>
