--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header>
     <nav class="nav__container">
       <div class="nav__navbar">
-        <h1 class="nav__title"><span>Acme</span>Web Design</h1>
+        <h1 class="nav__title-top"><span>Acme</span>Web Design</h1>
         <ul>
           <li><a href="/index.html">Home</a></li>
           <li><a href="/about">About</a></li>
