added fonts links and image folder modified html and css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato&family=Poppins:ital@0;1&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/style.css">
   <title>Document</title>
 </head>
@@ -13,8 +19,12 @@
   <header>
     <nav class="nav__container">
       <div class="nav__navbar">
-        <h1 class="nav__title-top"><span>Acme</span>Web Design</h1>
-        <ul>
+        <div class="nav__logo-top">
+          <h1 class="nav__title"><span class="nav__acme">Acme</span>
+            Web Design</h1>
+        </div>
+
+        <ul class="nav__menu">
           <li><a href="/index.html">Home</a></li>
           <li><a href="/about">About</a></li>
           <li><a href="/contact.html  class=" current">About</a></li>
@@ -24,7 +34,13 @@
 
     </nav>
   </header>
-
+  <div class="hero__image">
+    <div class="hero__text">
+      <h1 class="hero__title">Affordable Professional Web Design</h1>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut deleniti vero quas ratione blanditiis id beatae
+        atque dolores inventore sequi.</p>
+    </div>
+  </div>
 
 
 </body>
