--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     </nav>
   </header>
-  <div class="hero__image">
+  <div class="hero__image1">
     <div class="hero__text">
       <h1 class="hero__title">Affordable Professional Web Design</h1>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut deleniti vero quas ratione blanditiis id beatae
