--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
         <ul class="nav__menu">
           <li><a href="/index.html">Home</a></li>
           <li><a href="/about">About</a></li>
-          <li><a href="/contact.html  class=" current">About</a></li>
+          <li><a href="/contact.html" class="current">Contact</a></li>
 
         </ul>
       </div>
 
     </nav>
   </header>
-  <div class="hero__image1it">
+  <div class="hero__image">
     <div class="hero__text">
       <h1 class="hero__title">Affordable Professional Web Design</h1>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut deleniti vero quas ratione blanditiis id beatae
