--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </div>
 
         <ul class="nav__menu">
-          <li><a href="/index.html">Home</a></li>
-          <li><a href="/about">About1</a></li>
+          <li><a href="/index.html" id='nav__current'>Home</a></li>
+          <li><a href=" /about.html">About</a></li>
           <li><a href="/contact.html" class="current">Contact</a></li>
 
         </ul>
