modified about.html, contact.html

--- a/contact.html
+++ b/contact.html
@@ -26,21 +26,14 @@
 
         <ul class="nav__menu">
           <li><a href="/index.html">Home</a></li>
-          <li><a href=" /about.html" id='nav__current'>About</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li><a href=" /about.html">About</a></li>
+          <li><a href="/contact.html" id='nav__current'>Contact</a></li>
 
         </ul>
       </div>
 
     </nav>
   </header>
-  <div class="hero__image">
-    <div class="hero__text">
-      <h1 class="hero__title">Affordable Professional Web Design</h1>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut deleniti vero quas ratione blanditiis id beatae
-        atque dolores inventore sequi.</p>
-    </div>
-  </div>
 
 
 </body>
